# Noise-Tolerant-Quantum-Control-Optimization

./: .dockerignore  .gitignore  .gitmodules  171yb_laser_control_theory_primer.md  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cs_dipole.db  docker-compose.yml  get_171Yb_Rydberg_lifetime.ipynb  pyproject.toml  requirements.txt
artifacts/: benchmark_v4_open_system_calibrated_runtime.json  benchmark_v4_open_system_vs_v3_closed.json  closed_system_cz_v2_best.json  closed_system_cz_v2_coarse_scan.json  closed_system_cz_v2_two_stage_coarse.json  closed_system_cz_v2_two_stage_fine.json  closed_system_cz_v2_two_stage_fit.json  closed_system_cz_v2_two_stage_optimal.json  freeze_v1_global_cz_coarse_scan.json  freeze_v1_global_cz_fine_scan.json  freeze_v1_global_cz_fit.json  freeze_v1_global_cz_optimal.json  reference_2202_00903_global_cz.json  reference_2202_00903_global_cz_scan.json  reference_2202_00903_ideal_yb_cz.json  smoke_v4_physical_time_136.0ns.json  smoke_v4_physical_time_raw_scan.json  smoke_v4_physical_time_summary.json  tmp_phase_eq7_smoke_100.0ns.json  tmp_phase_eq7_smoke_raw_scan.json  tmp_phase_eq7_smoke_summary.json  two_photon_cz_v3_best.json  two_photon_cz_v3_coarse_scan.json  two_photon_cz_v3_local_scan_7p5_8p5.json  two_photon_cz_v3_local_scan_7p5_8p5_best.json  two_photon_cz_v4_0_300ns_100mhz_coarse_120ns.json  two_photon_cz_v4_0_300ns_100mhz_coarse_150ns.json  two_photon_cz_v4_0_300ns_100mhz_coarse_180ns.json  two_photon_cz_v4_0_300ns_100mhz_coarse_210ns.json  two_photon_cz_v4_0_300ns_100mhz_coarse_240ns.json  two_photon_cz_v4_0_300ns_100mhz_coarse_270ns.json  two_photon_cz_v4_0_300ns_100mhz_coarse_300ns.json  two_photon_cz_v4_0_300ns_100mhz_coarse_30ns.json  two_photon_cz_v4_0_300ns_100mhz_coarse_60ns.json  two_photon_cz_v4_0_300ns_100mhz_coarse_90ns.json  two_photon_cz_v4_0_300ns_100mhz_coarse_summary.json  two_photon_cz_v4_0_300ns_100mhz_summary.json  two_photon_cz_v4_0_300ns_10mhz_coarse_120ns.json  two_photon_cz_v4_0_300ns_10mhz_coarse_150ns.json  two_photon_cz_v4_0_300ns_10mhz_coarse_180ns.json  (+102 more)
(+334 files in other folders)
